[package]
name = "stremio-example-ui"
version = "0.1.0"
authors = ["Ivo Georgiev <ivo@strem.io>"]
edition = "2018"

[dependencies]
stremio-state-ng = { git = "https://github.com/stremio/stremio-state-ng.git" }
reqwest = "0.9.x"
tokio = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
enclose = "0.1.3"
serde_json = "1.0"
azul = { git = "https://github.com/maps4print/azul" }
