[package]
name = "stremio-example-ui"
version = "0.1.0"
authors = ["Ivo Georgiev <ivo@strem.io>"]
edition = "2018"

[dependencies]
stremio-core = { git = "https://github.com/stremio/stremio-core.git" }
reqwest = "0.9.x"
tokio = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
enclose = "0.1.3"
conrod_core = "0.63.0"
conrod_gfx = "0.63.0"
conrod_winit = "0.63.0"
gfx = { version = "0.17" }
gfx_core = { version = "0.8" }
gfx_window_glutin = "0.28"
glutin = "0.19"
winit = "0.18"
serde_json = "1.0"
mpv = "0.2.3"
lazy_static = "1.2.0"
sled = "0.23.0"
